# fmt-simulator

./: .gitignore  CMakeLists.txt  README.md  fmt-simulator.pro  fmtGUI.pro  fmt_simulator.cpp
GUI/include/: cmpAddWindow.hpp  cmpEditWindow.hpp  cmpList.hpp  fmt_mainwindow.hpp  fmt_mainwindow.ui  gui_incl.hpp  prjNewWindow.hpp  saveStpAsWindow.hpp  simStartWindow.hpp  utilsGUI.hpp
GUI/src/: cmpAddWindow.cpp  cmpEditWindow.cpp  cmpList.cpp  fmt_mainwindow.cpp  prjNewWindow.cpp  saveStpAsWindow.cpp  simStartWindow.cpp  utils.cpp  utilsGUI.cpp
components/: Makefile  component.hpp  filter.hpp  test.cpp
components/include/: SquareMirror.hpp  aperture.hpp  bmpFileHeader.hpp  bmpInfoHeader.hpp  bmprgb.hpp  circleMirror.hpp  component.hpp  componentType.hpp  componentsEnum.hpp  detector.hpp  ellipticalMirror.hpp  filter.hpp  lens.hpp  lensOneSided.hpp  lensTwoSided.hpp  mirror.hpp  mirrorCircle.hpp  mirrorElliptical.hpp  mirrorRectangle.hpp  mirrorSquare.hpp  photon.hpp  pixel.hpp  rectangleMirror.hpp  rgb.hpp  utils.hpp
components/src/: SquareMirror.cpp  aperture.cpp  bmpFileHeader.cpp  bmpInfoHeader.cpp  bmprgb.cpp  circleMirror.cpp  component.cpp  componentType.cpp  detector.cpp  dummy.h  ellipticalMirror.cpp  filter.cpp  lens.cpp  lensOneSided.cpp  lensTwoSided.cpp  mirror.cpp  mirrorCircle.cpp  mirrorElliptical.cpp  mirrorRectangle.cpp  mirrorSquare.cpp  mirroreElliptical.cpp  photon.cpp  pixel.cpp  rectangleMirror.cpp  rgb.cpp  test.cpp  utils.cpp
logic/: dummy.cpp
logic/include/: config.hpp  exporter.hpp  importer.hpp  importobject.hpp  mainRoutine.hpp  objectGenerator.hpp  optim.hpp  setupExporter.hpp  setupImporter.hpp  setupList.hpp
logic/src/: exporter.cpp  importObject.cpp  importer.cpp  mainRoutine.cpp  objectGenerator.cpp  optim.cpp  setup.xml  setupExporter.cpp  setupImporter.cpp  setupList.cpp  test.cpp  test.xml
photon/include/: photon.hpp  photonGenerator.hpp
photon/src/: photon.cpp  photonGenerator.cpp
utils/include/: bmpFileHeader.hpp  bmpInfoHeader.hpp  bmprgb.hpp  objectPoint.hpp  operators.hpp  rgb.hpp  utils.hpp
utils/src/: bmpFileHeader.cpp  bmpInfoHeader.cpp  bmprgb.cpp  objectPoint.cpp  operators.cpp  rgb.cpp  utils.cpp
